--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -1,4 +1,4 @@
 .container {
-  width: min(90%, 90rem);
+  width: min(90%, 70rem);
   margin: 0 auto;
 }
